# booksmart

./: .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/verify/: SKILL.md
.githooks/: commit-msg
.github/workflows/: ci.yml  publish.yml
app/: config.py  db.py  extraction.py  fakes.py  llm.py  main.py  models.py  parsing.py  profile.py  runner.py  schemas.py  stages.py  storage.py  structure.py  summaries.py  vectors.py  worker.py
app/routers/: books.py  jobs.py  knowledge.py
docs/adr/: 0001-model-locked-vector-collection.md  0002-stages-are-the-unit-of-durability.md
docs/agents/: domain.md
docs/api-notes/: README.md  deployment.md  http-surface.md  preference-snapshot.md  upload-validation.md
docs/prds/: book-ingestion-prd.md
docs/research/: gemini-llm-limits.md  llm-limits-cheap-tiers.md  semantic-search.md
migrations/: env.py
migrations/versions/: 0003_create_ingestion_jobs.py  0004_add_parser_used.py  0006_create_book_profiles.py  0007_create_knowledge_objects.py  0008_add_summaries_and_embeddings.py  0011_add_job_token_usage.py
stubs/pymupdf4llm/: __init__.pyi
tests/: conftest.py  test_books_api.py  test_embeddings_api.py  test_extraction.py  test_ingestion_api.py  test_knowledge_api.py  test_llm_provider.py  test_parser_chain.py  test_parser_fallback.py  test_profile_api.py  test_provider_limits.py  test_reprocess_api.py  test_stage_contract.py  test_structure_api.py  test_structure_detection.py  test_summaries.py  test_vector_store.py
