[project]
name = "booksmart"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pymupdf4llm>=1.28.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["app"]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
