[project]
name = "booksmart-workspace"
version = "0.0.0"
description = "Workspace root for booksmart-core and the booksmart CLI."
requires-python = ">=3.12"
dependencies = [
    "booksmart-core",
    "booksmart",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/cli"]

[tool.uv.sources]
booksmart-core = { workspace = true }
booksmart = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests"]

[tool.mypy]
strict = true
packages = ["booksmart_core", "booksmart_cli"]
mypy_path = "packages/core/stubs"
