[project]
name = "booksmart-workspace"
version = "0.0.0"
description = "Workspace root for booksmart-core and the booksmart CLI."
requires-python = ">=3.12"
dependencies = [
    "booksmart-core",
    "booksmart",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/cli"]

[tool.uv.sources]
booksmart-core = { workspace = true }
booksmart = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/cli/tests"]
# The core suite is a `tests` package (relative imports); the CLI suite is a
# plain directory. importlib mode lets both coexist without an import-path clash.
addopts = "--import-mode=importlib"

[tool.mypy]
strict = true
packages = ["booksmart_core", "booksmart_cli"]
mypy_path = "packages/core/stubs"
